--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/web.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <!-- HTML Meta Tags -->
+      <title>Bridge Write — สะพานเขียน</title>
+      <meta name="description" content="มันไม่ผิดกฏหมายแน่ ๆ 3000% ถ้าขออนุญาต">
+
+      <!-- Facebook Meta Tags -->
+      <meta property="og:url" content="https://bridge.tinarskii.com/">
+      <meta property="og:type" content="website">
+      <meta property="og:title" content="Bridge Write — สะพานเขียน">
+      <meta property="og:description" content="มันไม่ผิดกฏหมายแน่ ๆ 3000% ถ้าขออนุญาต">
+      <meta property="og:image" content="https://bridge.tinarskii.com/banner.png">
+
+      <!-- Twitter Meta Tags -->
+      <meta name="twitter:card" content="summary_large_image">
+      <meta property="twitter:domain" content="bridge.tinarskii.com">
+      <meta property="twitter:url" content="https://bridge.tinarskii.com/">
+      <meta name="twitter:title" content="Bridge Write — สะพานเขียน">
+      <meta name="twitter:description" content="มันไม่ผิดกฏหมายแน่ ๆ 3000% ถ้าขออนุญาต">
+      <meta name="twitter:image" content="https://bridge.tinarskii.com/banner.png">
     <title>Bridge Write</title>
   </head>
   <body>
