fix: fontSize too big for mobile

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <meta property="og:type" content="website">
       <meta property="og:title" content="Bridge Write — สะพานเขียน">
       <meta property="og:description" content="มันไม่ผิดกฏหมายแน่ ๆ 3000% ถ้าขออนุญาต">
-      <meta property="og:image" content="https://bridge.tinarskii.com/banner.png">
+      <meta property="og:image" content="https://bridge.tinarskii.com/bridge.jpeg">
 
       <!-- Twitter Meta Tags -->
       <meta name="twitter:card" content="summary_large_image">
@@ -21,7 +21,7 @@
       <meta property="twitter:url" content="https://bridge.tinarskii.com/">
       <meta name="twitter:title" content="Bridge Write — สะพานเขียน">
       <meta name="twitter:description" content="มันไม่ผิดกฏหมายแน่ ๆ 3000% ถ้าขออนุญาต">
-      <meta name="twitter:image" content="https://bridge.tinarskii.com/banner.png">
+      <meta name="twitter:image" content="https://bridge.tinarskii.com/bridge.jpeg">
   </head>
   <body>
     <div id="app"></div>
